--- a/openshift/gitops/manifests/bootstrap/argocd/base/argocd.yaml
+++ b/openshift/gitops/manifests/bootstrap/argocd/base/argocd.yaml
@@ -4,6 +4,14 @@ metadata:
   name: openshift-gitops
   namespace: openshift-gitops
 spec:
+  repo:
+    resources:
+      limits:
+        cpu: "1"
+        memory: 1024Mi
+      requests:
+        cpu: 250m
+        memory: 256Mi
   dex:
     openShiftOAuth: true
     version: sha256:77bfea96e8d8f3e4197b9f6020c8f5dedbb701245c19afd69a15747ae4bf2804
