--- a/ansible/roles/oci-build-installer-image/tasks/main.yaml
+++ b/ansible/roles/oci-build-installer-image/tasks/main.yaml
@@ -2,24 +2,52 @@
   ansible.builtin.assert:
     fail_msg: >
       Make sure the following extra variables are defined before running this role:
-      - blueprint_name
-      - ostree_repo_url
+      - blueprint_source_dir
       - build_commit_id_output_file
+      - ostree_repo_url
     that:
-      - blueprint_name is defined
-      - ostree_repo_url is defined
+      - blueprint_source_dir is defined
       - build_commit_id_output_file is defined
+      - ostree_repo_url is defined
 
-- name: List Blueprints in Image Builder
+- name: Validate Blueprint Directory and Blueprint File Exists
+  ansible.builtin.stat:
+    path: "{{ item }}"
+  become: no
+  delegate_to: localhost
+  failed_when: not blueprint_exists.stat.exists
+  loop:
+    - "{{ blueprint_source_dir }}"
+    - "{{ blueprint_source_dir }}/blueprint.toml"
+  register: blueprint_exists
+
+- name: Create Blueprints Directory
+  ansible.builtin.file:
+    path: "{{ blueprint_remote_dir }}"
+    state: directory
+
+- name: Set Blueprint Facts
+  ansible.builtin.set_fact:
+    blueprint_name: "{{ blueprint_source_dir | basename }}"
+    build_blueprint_dir: "{{ blueprint_remote_dir }}/{{ blueprint_source_dir | basename }}"
+
+- name: Copy Blueprints Directory to Image Builder
+  ansible.builtin.copy:
+    dest: "{{ build_blueprint_dir }}/"
+    src: "{{ blueprint_source_dir }}/"
+
+- name: Push Blueprint to Server
   ansible.builtin.command: >
-    composer-cli -j blueprints list
-  register: blueprints_list
+    composer-cli blueprints push "{{ build_blueprint_dir }}/blueprint.toml"
 
-- name: Assert Blueprint is in List of Blueprints
-  ansible.builtin.assert:
-    fail_msg: "Blueprint {{ blueprint_name }} is not in list of blueprints!"
-    that:
-      - blueprint_name in (blueprints_list.stdout | from_json).blueprints
+- name: Resolve Dependencies
+  ansible.builtin.command: >
+    composer-cli blueprints depsolve {{ blueprint_name }}
+
+- name: Freeze Blueprint
+  ansible.builtin.command: >
+    composer-cli -j blueprints freeze {{ blueprint_name }}
+  register: frozen_blueprint
 
 - name: Generate ISO
   block:
