--- a/openshift/gitops/manifests/rfe/pipelines/base/rfe-oci-iso-pipeline.yaml
+++ b/openshift/gitops/manifests/rfe/pipelines/base/rfe-oci-iso-pipeline.yaml
@@ -23,6 +23,10 @@ spec:
       description: Blueprint Repository URL
       default: https://github.com/redhat-cop/rhel-edge-automation-arch.git
       type: string
+    - name: blueprints-git-revision
+      description: Blueprints Repository URL Reference
+      default: blueprints
+      type: string
     - name: kickstart-url
       description: URL Pointing to Kickstart Location
       type: string
@@ -82,7 +86,7 @@ spec:
         - name: image-builder-secret
           value: $(params.image-builder-secret)
         - name: iso-blueprint
-          value: $(params.iso-blueprint)
+          value: /workspace/workspace/blueprints/$(params.iso-blueprint)
       runAfter:
         - "git-clone-tooling"
         - "git-clone-blueprints"
