--- a/openshift/gitops/manifests/rfe/httpd/base/deployment.yaml
+++ b/openshift/gitops/manifests/rfe/httpd/base/deployment.yaml
@@ -36,7 +36,7 @@ spec:
               memory: "512Mi"
               cpu: "500m"
           volumeMounts:
-            - mountPath: /opt/rh/httpd24/root/var/www/html
+            - mountPath: /var/www/html
               name: data
       volumes:
         - name: data
