--- a/ansible/roles/oci-build-auto-iso/tasks/main.yaml
+++ b/ansible/roles/oci-build-auto-iso/tasks/main.yaml
@@ -3,9 +3,11 @@
     fail_msg: >
       Make sure the following extra variables are defined before running this role:
       - build_commit_id
+      - iso_url_output_file
       - kickstart_url
     that:
       - build_commit_id is defined
+      - iso_url_output_file is defined
       - kickstart_url is defined
 
 - name: List Finished Builds
@@ -23,7 +25,7 @@
 - name: Set Remote Tar Directory
   ansible.builtin.set_fact:
     iso_directory: "/tmp/{{ build_commit_id }}"
-    edge_iso_path: "/tmp/{{ build_commit_id }}/{{ build_commit_id }}-auto.iso"
+    edge_iso_path: "/var/www/html/{{ build_commit_id }}-auto.iso"
 
 - name: Create Remote Tar Directory
   ansible.builtin.file:
@@ -35,11 +37,13 @@
     composer-cli compose image {{ build_commit_id | quote }}
   args:
     chdir: "{{ iso_directory }}"
+  register: compose_image_results
+  failed_when:
+    - compose_image_results.rc not 0
+    - "skipping download" not in compose_image_results.stdout
 
 - name: Find Edge Image File
   ansible.builtin.find:
-    age: "-5m"
-    age_stamp: ctime
     depth: 0
     paths: "{{ iso_directory }}"
     patterns:
@@ -56,116 +60,103 @@
     iso_mount_path: "{{ iso_directory }}/mount"
     iso_source_path: "{{ find_results.files[0].path }}"
 
-- name: Get ISO Label
-  ansible.builtin.command: >
-    blkid -s LABEL -o value {{ iso_source_path | quote }}
-  register: iso_source_label
+- name: Process ISO
+  block:
+    - name: Get ISO Label
+      ansible.builtin.command: >
+        blkid -s LABEL -o value {{ iso_source_path | quote }}
+      register: iso_source_label
 
-- name: Create Working Directories
-  ansible.builtin.file:
-    path: "{{ item }}"
-    state: directory
-    mode: "0755"
-  loop:
-    - "{{ scratch_path }}"
-    - "{{ iso_mount_path }}"
+    - name: Create Working Directories
+      ansible.builtin.file:
+        path: "{{ item }}"
+        state: directory
+        mode: "0755"
+      loop:
+        - "{{ scratch_path }}"
+        - "{{ iso_mount_path }}"
 
-- name: Mount ISO
-  ansible.posix.mount:
-    boot: no
-    fstype: iso9660
-    opts: loop
-    path: "{{ iso_mount_path }}"
-    src: "{{ iso_source_path }}"
-    state: mounted
-  
-- name: Copy ISO Contents to Scratch Directory
-  ansible.posix.synchronize:
-    dest: "{{ scratch_path }}/"
-    recursive: yes
-    src: "{{ iso_mount_path }}/"
-  delegate_to: "{{ inventory_hostname }}"
+    - name: Mount ISO
+      ansible.posix.mount:
+        boot: no
+        fstype: iso9660
+        opts: loop
+        path: "{{ iso_mount_path }}"
+        src: "{{ iso_source_path }}"
+        state: mounted
 
-- name: Copy Kickstart File to Scratch Directory
+    - name: Copy ISO Contents to Scratch Directory
+      ansible.posix.synchronize:
+        dest: "{{ scratch_path }}/"
+        recursive: yes
+        src: "{{ iso_mount_path }}/"
+      delegate_to: "{{ inventory_hostname }}"
+
+    - name: Copy Kickstart File to Scratch Directory
+      ansible.builtin.get_url:
+        dest: "{{ scratch_path }}/kickstart.ks"
+        url: "{{ kickstart_url }}"
+        validate_certs: no
+
+    - name: Copy Updated Grub Configuration
+      ansible.builtin.template:
+        dest: "{{ scratch_path }}/EFI/BOOT/grub.cfg"
+        group: root
+        mode: "0644"
+        owner: root
+        src: grub.cfg.j2
+
+    - name: Copy Updated ISOLINUX Configuration
+      ansible.builtin.template:
+        dest: "{{ scratch_path }}/isolinux/isolinux.cfg"
+        group: root
+        mode: "0644"
+        owner: root
+        src: isolinux.cfg.j2
+
+    - name: Generate Bootable ISO
+      ansible.builtin.shell:
+        chdir: "{{ scratch_path }}"
+        cmd: |
+          mkisofs \
+          -o {{ edge_iso_path | quote }} \
+          -b isolinux/isolinux.bin \
+          -J \
+          -R \
+          -l \
+          -c isolinux/boot.cat \
+          -no-emul-boot \
+          -boot-load-size 4 \
+          -boot-info-table \
+          -eltorito-alt-boot \
+          -e images/efiboot.img \
+          -no-emul-boot \
+          -graft-points \
+          -V "{{ iso_source_label.stdout | quote }}" .
+      register: rfe_iso_results
+
+    - name: Build EFI Bootable Image
+      ansible.builtin.shell:
+        cmd: isohybrid --uefi {{ edge_iso_path | quote }}
+  always:
+    - name: Remove ISO Mount
+      ansible.posix.mount:
+        path: "{{ iso_mount_path }}"
+        state: absent
+
+    - name: Remove Working Directories and Files
+      ansible.builtin.file:
+        path: "{{ item }}"
+        state: absent
+      loop:
+        - "{{ iso_directory }}"
+
+- name: Pull ISO From Image Builder to httpd Pod
   ansible.builtin.get_url:
-    dest: "{{ scratch_path }}/kickstart.ks"
-    url: "{{ kickstart_url }}"
-    validate_certs: no
-
-- name: Copy Updated Grub Configuration
-  ansible.builtin.template:
-    dest: "{{ scratch_path }}/EFI/BOOT/grub.cfg"
-    group: root
-    mode: "0644"
-    owner: root
-    src: grub.cfg.j2
-    
-- name: Copy Updated ISOLINUX Configuration
-  ansible.builtin.template:
-    dest: "{{ scratch_path }}/isolinux/isolinux.cfg"
-    group: root
-    mode: "0644"
-    owner: root
-    src: isolinux.cfg.j2
-
-- name: Generate Bootable ISO
-  ansible.builtin.shell:
-    chdir: "{{ scratch_path }}"
-    cmd: |
-      mkisofs \
-      -o {{ edge_iso_path | quote }} \
-      -b isolinux/isolinux.bin \
-      -J \
-      -R \
-      -l \
-      -c isolinux/boot.cat \
-      -no-emul-boot \
-      -boot-load-size 4 \
-      -boot-info-table \
-      -eltorito-alt-boot \
-      -e images/efiboot.img \
-      -no-emul-boot \
-      -graft-points \
-      -V "{{ iso_source_label.stdout | quote }}" .
-  register: rfe_iso_results
-
-- name: Build EFI Bootable Image
-  ansible.builtin.shell:
-    cmd: isohybrid --uefi {{ edge_iso_path | quote }}
-
-- name: Fetch Edge ISO from Image Builder VM
-  ansible.builtin.fetch:
-    dest: "/tmp/{{ edge_iso_path | basename }}"
-    flat: yes
-    src: "{{ edge_iso_path }}"
-
-- name: Ensure Remote Directory in httpd Pod Exists
-  ansible.builtin.file:
-    path: "{{ edge_iso_remote_path }}"
-    state: directory
+    dest: "{{ edge_iso_path }}"
+    url: "http://{{ image_builder_service_name }}/{{ edge_iso_path | basename }}"
   become: no
   delegate_to: "{{ groups.httpd_pod_group[0] }}"
-
-- name: Copy Edge ISO to httpd Pod
-  ansible.builtin.copy:
-    dest: "{{ edge_iso_remote_path }}/{{ edge_iso_path | basename }}"
-    src: "/tmp/{{ edge_iso_path | basename }}"
-  become: no
-  delegate_to: "{{ groups.httpd_pod_group[0] }}"
-
-- name: Remove ISO Mount
-  ansible.posix.mount:
-    path: "{{ iso_mount_path }}"
-    state: absent
-
-- name: Remove Working Directories and Files
-  ansible.builtin.file:
-    path: "{{ item }}"
-    state: absent
-  loop:
-    - "{{ scratch_path }}"
-    - "{{ iso_mount_path }}"
-    - "/tmp/{{ edge_iso_path | basename }}"
 
 - name: Get httpd Route
   community.kubernetes.k8s_info:
@@ -182,6 +173,6 @@
 
 - name: Set iso_storage_url Result
   ansible.builtin.copy:
-    content: "{{ ('https://' if httpd_route.resources[0].spec.tls is defined else 'http://') + httpd_route.resources[0].spec.host }}/images/{{ edge_iso_name }}"
-    dest: "{{ iso_storage_url }}"
+    content: "{{ ('https://' if httpd_route.resources[0].spec.tls is defined else 'http://') + httpd_route.resources[0].spec.host }}/images/{{ edge_iso_path | basename }}"
+    dest: "{{ iso_url_output_file }}"
   delegate_to: localhost
