--- a/openshift/gitops/manifests/rfe/httpd/base/deployment.yaml
+++ b/openshift/gitops/manifests/rfe/httpd/base/deployment.yaml
@@ -8,7 +8,7 @@ metadata:
     app.kubernetes.io/component: httpd
     app.kubernetes.io/instance: httpd
   name: httpd
-  namespace: httpd
+  namespace: rfe
 spec:
   replicas: 1
   selector:
