--- a/openshift/gitops/manifests/rfe/rbac/base/rfe-automation-role.yaml
+++ b/openshift/gitops/manifests/rfe/rbac/base/rfe-automation-role.yaml
@@ -8,6 +8,7 @@ rules:
       - image.openshift.io
     resources:
       - imagestreams
+      - imagestreamimports
     verbs:
       - create
       - patch
