--- a/openshift/gitops/manifests/rfe/pipelines/base/rfe-oci-iso-pipeline.yaml
+++ b/openshift/gitops/manifests/rfe/pipelines/base/rfe-oci-iso-pipeline.yaml
@@ -9,11 +9,11 @@ spec:
   params:
     - name: tooling-git-url
       description: Tooling Repository URL
-      default: https://github.com/nasx/rhel-edge-automation-arch.git
+      default: https://github.com/redhat-cop/rhel-edge-automation-arch.git
       type: string
     - name: tooling-git-revision
       description: Tooling Repository URL Reference
-      default: iso-pipeline-v2
+      default: main
       type: string
     - name: blueprint-dir
       description: Directory in Blueprints repository containing blueprint
