rfe-oci-pipeline -> rfe-oci-image-pipeline

--- a/openshift/gitops/manifests/rfe/pipelines/base/rfe-oci-image-pipeline.yaml
+++ b/openshift/gitops/manifests/rfe/pipelines/base/rfe-oci-image-pipeline.yaml
@@ -4,7 +4,7 @@ metadata:
   annotations:
     argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
     argocd.argoproj.io/sync-wave: "5"
-  name: rfe-oci-pipeline
+  name: rfe-oci-image-pipeline
 spec:
   params:
     - name: blueprints-git-url
