--- a/ansible/roles/nexus-upload/tasks/main.yaml
+++ b/ansible/roles/nexus-upload/tasks/main.yaml
@@ -11,6 +11,14 @@
       - file_to_upload is defined
       - file_exists.stat.exists
 
+- name: Verify Nexus Variables are Defined
+  ansible.builtin.assert:
+    fail_msg: >
+      Make sure the following extra variables are defined before running this role:
+        - nexus_repository
+    that:
+      - nexus_repository is defined
+
 - name: Get Nexus Credentials
   community.kubernetes.k8s_info:
     api_key: "{{ lookup('file', '/var/run/secrets/kubernetes.io/serviceaccount/token') }}"
@@ -20,6 +28,7 @@
     namespace: rfe
     name: "{{ nexus_credentials_secret_name }}"
     validate_certs: yes
+  delegate_to: localhost
   failed_when: nexus_secret.resources | length != 1
   register: nexus_secret
 
@@ -29,23 +38,10 @@
     nexus_username: "{{ nexus_secret.resources[0].data.username | b64decode }}"
   no_log: true
 
-- name: Verify Nexus Variables are Defined
-  ansible.builtin.assert:
-    fail_msg: >
-      Make sure the following extra variables are defined before running this role:
-        - nexus_repository
-    that:
-      - nexus_repository is defined
-
 - name: Set Nexus Destination Path
   ansible.builtin.set_fact:
     nexus_destination_path: >-
-      {{
-        "repository/" + 
-        nexus_repository + "/" +
-        (nexus_repository_folder + '/' if nexus_repository_folder is defined) +
-        (uploaded_filename_override | default(file_to_upload | basename))
-      }}
+      repository/{{ nexus_repository }}/{{ nexus_repository_folder + '/' if nexus_repository_folder is defined }}{{ uploaded_filename_override | default(file_to_upload | basename) }}
 
 - name: Upload File to Nexus
   ansible.builtin.uri:
@@ -54,7 +50,7 @@
       Content-Type: application/octet-stream
     method: PUT
     password: "{{ nexus_password }}"
-    src: "{{ file_to_upload }}"
+    remote_src: "{{ file_to_upload }}"
     status_code:
       - 201
     url: "{{ nexus_http_scheme }}://{{ nexus_service_name }}:{{ nexus_service_port }}/{{ nexus_destination_path }}"
