Updating kickstart pipeline for v2.

--- a/ansible/playbooks/upload-kickstart.yaml
+++ b/ansible/playbooks/upload-kickstart.yaml
@@ -1,10 +1,30 @@
 ---
-- hosts: localhost
+- name: Upload Kickstart
+  hosts: localhost
   vars:
     nexus_credentials_secret_name: nexus-rfe-credentials
     nexus_rfe_kickstarts_repository: rfe-kickstarts
     kickstart_destination_dir: /tmp/rfe-kickstart-dest
   tasks:
+    - name: Assert Kickstart File Variable Exists and is Found
+      stat:
+        path: "{{ kickstart_file }}"
+      register: file_exists
+      when: kickstart_file is defined
+
+    - name: Assert File Exists
+      assert:
+        fail_msg: "File is not defined or does not exist!"
+        that:
+          - kickstart_file is defined
+          - file_exists.stat.exists
+
+    - name: Assert OSTree Repo URL is Defined
+      assert:
+        fail_msg: "OSTree Repo URL is not defined!"
+        that:
+          - ostree_repo_url is defined
+
     - name: Get Nexus Credentials
       community.kubernetes.k8s_info:
         api_key: "{{ lookup('file', '/var/run/secrets/kubernetes.io/serviceaccount/token') }}"
@@ -23,25 +43,6 @@
         nexus_password: "{{ nexus_secret.resources[0].data.password | b64decode }}"
       no_log: true
 
-    - name: Assert Kickstart file variable exists and is found
-      stat:
-        path: "{{ kickstart_file }}"
-      register: file_exists
-      when: kickstart_file is defined
-
-    - name: Assert file exists
-      assert:
-        fail_msg: "File is not defined or does not exist"
-        that:
-          - kickstart_file is defined
-          - file_exists.stat.exists
-
-    - name: Assert RFE Tarball URL is defined
-      assert:
-        fail_msg: "RFE Tarball URL is not defined"
-        that:
-          - rfe_tarball_url is defined
-
     - name: Create Kickstart Template directory
       file:
         state: directory
@@ -51,7 +52,7 @@
       set_fact:
         kickstart_destination: "{{ kickstart_destination_dir}}/{{ override_kickstart_filename if override_kickstart_filename is defined else 'kickstart.ks' }}"
 
-    - name: Template Kickstart file
+    - name: Template Kickstart File
       template:
         src: "{{ kickstart_file }}"
         dest: "{{ kickstart_destination }}"
