--- a/openshift/gitops/manifests/rfe/pipelines/base/upload-kickstart-task.yaml
+++ b/openshift/gitops/manifests/rfe/pipelines/base/upload-kickstart-task.yaml
@@ -9,8 +9,8 @@ spec:
   workspaces:
     - name: workspace
   params:
-    - name: rfe-tarball-url
-      description: URL of the RFE Tarball
+    - name: ostree-repo-url
+      description: URL of the OSTree Repository
     - name: kickstart-path
       description: Directory containing kickstart file
       type: string
@@ -27,14 +27,21 @@ spec:
     - name: serving-storage-url
       description: Location where the asset is served
   steps:
-    - name: build-rfe-tarball
+    - name: upload-kickstart-playbook
       image: image-registry.openshift-image-registry.svc:5000/rfe/ansible-rfe-runner:latest
       workingDir: /workspace/workspace
       args:
         - |-
           cd tooling/ansible
           ansible-galaxy collection install -r collections/requirements.yaml
-          ansible-playbook playbooks/upload-kickstart.yaml -e rfe_tarball_url=$(params.rfe-tarball-url) -e kickstart_file=$(params.kickstart-path) -e kickstart_destination_dir=$(params.kickstart-destination-dir) -e artifact_repository_url_output_file=$(results.artifact-repository-storage-url.path) -e storage_url_output_file=$(results.serving-storage-url.path) $(params.extra-ansible-variables)
+          ansible-playbook \
+            -e ostree_repo_url=$(params.ostree-repo-url) \
+            -e kickstart_file=$(params.kickstart-path) \
+            -e kickstart_destination_dir=$(params.kickstart-destination-dir) \
+            -e artifact_repository_url_output_file=$(results.artifact-repository-storage-url.path) \
+            -e storage_url_output_file=$(results.serving-storage-url.path) \
+            $(params.extra-ansible-variables) \
+            playbooks/upload-kickstart.yaml
       command:
         - /bin/bash
         - -c
