--- a/openshift/gitops/manifests/rfe/nexus/base/nexus-setup-job.yaml
+++ b/openshift/gitops/manifests/rfe/nexus/base/nexus-setup-job.yaml
@@ -17,7 +17,7 @@ spec:
             - name: SERVICE_NAME
               value: nexus
             - name: NEXUS_REPOSITORIES
-              value: "rfe-kickstarts,rfe-tarballs,rfe-rhel-media"
+              value: "rfe-kickstarts,rfe-tarballs,rfe-rhel-media,rfe-auto-iso"
             - name: RFE_NEXUS_SECRET
               value: "nexus-rfe-credentials"
             - name: RFE_NEXUS_USERNAME
@@ -63,7 +63,7 @@ spec:
                   -u "${NEXUS_ADMIN_USERNAME}:${NEXUS_ADMIN_PASSWORD}" \
                   -H "accept: application/json" \
                   -H "Content-Type: application/json" \
-                  -d "{ \"id\": \"rfe\",\"name\": \"rfe\",\"description\": \"Management of rfe assets\",\"privileges\": [\"nx-repository-admin-raw-rfe-kickstarts-*\",\"nx-repository-admin-raw-rfe-tarballs-*\",\"nx-repository-admin-raw-rfe-rhel-media-*\",\"nx-repository-view-raw-rfe-tarballs-*\",\"nx-repository-view-raw-rfe-kickstarts-*\",\"nx-repository-view-raw-rfe-rhel-media-*\"]}"
+                  -d "{ \"id\": \"rfe\",\"name\": \"rfe\",\"description\": \"Management of rfe assets\",\"privileges\": [\"nx-repository-admin-raw-rfe-kickstarts-*\",\"nx-repository-admin-raw-rfe-tarballs-*\",\"nx-repository-admin-raw-rfe-rhel-media-*\",\"nx-repository-admin-raw-rfe-auto-iso-*\",\"nx-repository-view-raw-rfe-tarballs-*\",\"nx-repository-view-raw-rfe-kickstarts-*\",\"nx-repository-view-raw-rfe-rhel-media-*\",\"nx-repository-view-raw-rfe-auto-iso-*\"]}"
 
               fi
 
