--- a/openshift/gitops/manifests/configs/quay/base/kustomization.yaml
+++ b/openshift/gitops/manifests/configs/quay/base/kustomization.yaml
@@ -5,6 +5,10 @@ resources:
   - namespace.yaml
   - quayappsubscription.yaml
   - quayregistry.yaml
-  - rfe-automation-role-quay.yaml
-  - rfe-automation-rolebinding-quay.yaml
   - quay-setup-job.yaml
+  - resource-locker-quay-patch.yaml
+  - resource-locker-quay-rolebinding.yaml
+  - resource-locker-quay-role.yaml
+  - resource-locker-quay-sa.yaml
+  - rfe-automation-rolebinding-quay.yaml
+  - rfe-automation-role-quay.yaml
