--- a/openshift/gitops/manifests/configs/ocs/base/noobaa.yaml
+++ b/openshift/gitops/manifests/configs/ocs/base/noobaa.yaml
@@ -9,10 +9,10 @@ metadata:
 spec:
   dbResources:
     requests:
-      cpu: '0.1'
+      cpu: 100m
       memory: 1Gi
   dbType: postgres
   coreResources:
     requests:
-      cpu: '0.1'
+      cpu: 100m
       memory: 1Gi
