--- a/openshift/gitops/manifests/configs/ocs/base/resource-locker-noobaa-patch.yaml
+++ b/openshift/gitops/manifests/configs/ocs/base/resource-locker-noobaa-patch.yaml
@@ -11,6 +11,7 @@ spec:
       apiVersion: noobaa.io/v1alpha1
       kind: BucketClass
       name: noobaa-default-bucket-class
+      namespace: openshift-storage
     patchTemplate: |
       spec:
         placementPolicy:
