--- a/openshift/gitops/manifests/configs/ocs/base/noobaa-pv-backing-store.yaml
+++ b/openshift/gitops/manifests/configs/ocs/base/noobaa-pv-backing-store.yaml
@@ -1,6 +1,9 @@
 apiVersion: noobaa.io/v1alpha1
 kind: BackingStore
 metadata:
+  annotations:
+    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
+    argocd.argoproj.io/sync-wave: '5'
   finalizers:
     - noobaa.io/finalizer
   labels:
@@ -13,5 +16,4 @@ spec:
     resources:
       requests:
         storage: 50Gi
-    storageClass: thin
   type: pv-pool
