--- a/ansible/roles/oci-push-image/tasks/main.yaml
+++ b/ansible/roles/oci-push-image/tasks/main.yaml
@@ -105,7 +105,9 @@
       - "docker://{{ quay_image_path | quote }}:latest"
   become: no
   delegate_to: localhost
+  register: skopeo_results
   retries: "{{ skopeo_retries }}"
+  until: skopeo_results.rc == 0
 
 - name: Add Version Tag
   ansible.builtin.command:
@@ -121,7 +123,9 @@
       - "docker://{{ quay_image_path | quote }}:{{ blueprint_version | quote }}"
   become: no
   delegate_to: localhost
+  register: skopeo_results
   retries: "{{ skopeo_retries }}"
+  until: skopeo_results.rc == 0
 
 - name: Set Tag List
   ansible.builtin.set_fact:
