--- a/openshift/gitops/manifests/rfe/image-builder-vm/base/redhat-image-downloader-ansible-job.yaml
+++ b/openshift/gitops/manifests/rfe/image-builder-vm/base/redhat-image-downloader-ansible-job.yaml
@@ -2,7 +2,7 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   annotations:
-    argocd.argoproj.io/hook: Sync
+    argocd.argoproj.io/hook: PreSync
     argocd.argoproj.io/hook-delete-policy: HookSucceeded
   labels:
     run: redhat-image-downloader-ansible-job
