--- a/openshift/gitops/manifests/argocd/apps/configs/cnv/base/cnv-app.yaml
+++ b/openshift/gitops/manifests/argocd/apps/configs/cnv/base/cnv-app.yaml
@@ -19,3 +19,9 @@ spec:
     automated:
       prune: false
       selfHeal: true
+    retry:
+      limit: 30
+      backoff:
+        duration: 20s
+        factor: 2
+        maxDuration: 20m
