--- a/charts/nexus/templates/nexus-setup-role.yaml
+++ b/charts/nexus/templates/nexus-setup-role.yaml
@@ -1,7 +1,8 @@
+{{- $setupJobName := include "common.names.appendSuffix" (dict "suffix" "setup" "context" $) -}}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  name: {{ template "nexus.setupJobName" . }}
+  name: {{ $setupJobName }}
   namespace: {{ template "common.names.namespace" $ }}
   labels:
     {{- include "common.labels.labels" . | nindent 4 }}
