--- a/charts/nexus/templates/nexus-setup-rolebinding.yaml
+++ b/charts/nexus/templates/nexus-setup-rolebinding.yaml
@@ -1,15 +1,16 @@
+{{- $setupJobName := include "common.names.appendSuffix" (dict "suffix" "setup" "context" $) -}}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: {{ template "nexus.setupJobName" . }}
+  name: {{ $setupJobName }}
   namespace: {{ template "common.names.namespace" $ }}
   labels:
     {{- include "common.labels.labels" . | nindent 4 }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
-  name: {{ template "nexus.setupJobName" . }}
+  name: {{ $setupJobName }}
 subjects:
   - kind: ServiceAccount
-    name: {{ template "nexus.setupJobName" . }}
+    name: {{ $setupJobName }}
     namespace: {{ template "common.names.namespace" $ }}
