--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ openshift/gitops/clusters/overlays/byo/bootstrap/redhat-portal-credentials
 openshift/gitops/clusters/overlays/byo/bootstrap/image-builder-ssh-private-key
 openshift/gitops/clusters/overlays/byo/bootstrap/image-builder-ssh-public-key
 .DS_Store
+charts/*/charts
+charts/*/Chart.lock
