--- a/charts/catalogsources/values.yaml
+++ b/charts/catalogsources/values.yaml
@@ -6,7 +6,7 @@ catalogsources:
     publisher: RedHatGov
     image:
       registry: quay.io
-      repository: redhatgov
+      repository: redhatgov/operator-catalog
       version: latest
 marketplace:
   namespace: openshift-marketplace
