Removing project_namespace variable.

--- a/charts/rbac/templates/oci-rfe-httpd-serviceaccount.yaml
+++ b/charts/rbac/templates/oci-rfe-httpd-serviceaccount.yaml
@@ -4,6 +4,6 @@ imagePullSecrets:
 kind: ServiceAccount
 metadata:
   name: oci-rfe-httpd
-  namespace: {{ .Values.project_namespace }}
+  namespace: {{ template "common.names.namespace" $ }}
   labels:
     {{- include "common.labels.labels" . | nindent 4 }}
