--- a/charts/rbac/templates/oci-rfe-httpd-rolebinding.yaml
+++ b/charts/rbac/templates/oci-rfe-httpd-rolebinding.yaml
@@ -2,7 +2,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: oci-rfe-httpd-rolebinding
-  namespace: {{ .Values.project_namespace }}
+  namespace: {{ template "common.names.namespace" $ }}
   labels:
     {{- include "common.labels.labels" . | nindent 4 }}
 subjects:
