--- a/charts/rbac/templates/rfe-automation-role.yaml
+++ b/charts/rbac/templates/rfe-automation-role.yaml
@@ -2,7 +2,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: rfe-automation
-  namespace: {{ .Values.project_namespace }}
+  namespace: {{ template "common.names.namespace" $ }}
   labels:
     {{- include "common.labels.labels" . | nindent 4 }}
 rules:
