--- a/charts/rbac/templates/rfe-serviceaccount.yaml
+++ b/charts/rbac/templates/rfe-serviceaccount.yaml
@@ -2,6 +2,6 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: rfe-automation
-  namespace: {{ .Values.project_namespace }}
+  namespace: {{ template "common.names.namespace" $ }}
   labels:
     {{- include "common.labels.labels" . | nindent 4 }}
