Updating templates for namespaces helm chart.

--- a/charts/namespaces/Chart.yaml
+++ b/charts/namespaces/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v2
 name: namespaces
 description: Configure Namespaces for RHEL Edge Automation
-type: namespaces
+type: application
 version: 0.1.0
 dependencies:
   - name: common
