--- a/charts/quay/templates/quayregistry.yaml
+++ b/charts/quay/templates/quayregistry.yaml
@@ -1,7 +1,7 @@
 apiVersion: quay.redhat.com/v1
 kind: QuayRegistry
 metadata:
-  name: quay
+  name: {{ template "common.names.fullname" . }}
   namespace: {{ template "common.names.namespace" $ }}
   labels:
     {{- include "common.labels.labels" . | nindent 4 }}
