--- a/charts/application-manager/templates/application.yaml
+++ b/charts/application-manager/templates/application.yaml
@@ -32,7 +32,12 @@ spec:
         {{- tpl (toYaml $chart.values) $ | nindent 8 }}
 {{- end }}
 {{- end }}
+{{- $helmChartTypeCheck := include "application-manager.chartRepoPath" (dict "chart" $chart "Values" $.Values "Release" $.Release) }}
+{{- if $helmChartTypeCheck }}
+    chart: {{ $helmChartTypeCheck }}
+{{- else }}
     path: {{ include "application-manager.chartPath" (dict "chart" $chart "Values" $.Values "Release" $.Release) }}
+{{- end }}
     repoURL: {{ $chart.repoURL | default $.Values.common.repoURL }}
     targetRevision: {{ $chart.targetRevision | default $.Values.common.targetRevision }}
   syncPolicy:
