--- a/charts/quay/templates/quayregistry.yaml
+++ b/charts/quay/templates/quayregistry.yaml
@@ -5,6 +5,8 @@ metadata:
   namespace: {{ template "common.names.namespace" $ }}
   labels:
     {{- include "common.labels.labels" . | nindent 4 }}
+  annotations:
+    {{- toYaml .Values.quayRegistryCR.annotations | nindent 4 }}
 spec:
   components:
 {{- range .Values.quay.components }}
